changes to home page

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="nav-left">
             <!-- Reference the logo image in the static folder -->
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="DCTR Logo" class="logo">
+            <img src="{{ url_for('static', filename='images/ossg.jpg') }}" alt="DCTR Logo" class="logo">
             <span class="brand">DCTR</span>
         </div>
         <div class="nav-center">
