--- a/project/static/css/index.css
+++ b/project/static/css/index.css
@@ -119,7 +119,7 @@ h1 {
 }
 
 .status-btn {
-    background-color: #00ff00;
+    background-color: #161a04;
     color: white;
     border: none;
     border-radius: 25px;
@@ -131,7 +131,7 @@ h1 {
 }
 
 .status-btn:hover {
-    background-color: #00dd00;
+    background-color: #000000;
 }
 
 @media (max-width: 768px) {
