--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -11,8 +11,8 @@
     <nav>
         <div class="nav-left">
             <!-- Reference the logo image in the static folder -->
-            <img src="{{ url_for('static', filename='images/ossg.jpg') }}" alt="DCTR Logo" class="logo">
-            <span class="brand">DCTR</span>
+            <img src="{{ url_for('static', filename='images/OSSG1.png') }}" alt="DCTR Logo" class="logo">
+            <span class="brand">D(SCTR)</span>
         </div>
         <div class="nav-center">
             <a href="#" class="active">Main</a>
